--- a/NodeJs/TennisLiveRankings/package.json
+++ b/NodeJs/TennisLiveRankings/package.json
@@ -9,6 +9,7 @@
     "ejs": "^2.6.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "node-cache": "^4.2.0",
     "opn": "^6.0.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
