--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/Ipsum.Generator.Web.csproj
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/Ipsum.Generator.Web.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OrchardCore.Application.Mvc.Targets" Version="1.0.0-rc1-10004" />
+  </ItemGroup>
+
 </Project>
