--- a/src/csharp/OrchardCore/JeffSum.Module/JeffSum.Module.csproj
+++ b/src/csharp/OrchardCore/JeffSum.Module/JeffSum.Module.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="OrchardCore.Module.Targets" Version="1.0.0-rc1-10004" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Jeff.Services\Jeff.Services.csproj" />
+  </ItemGroup>
+
 </Project>
