Additions of the Jeff, Hipster and Dino module.
Tidying to follow.

--- a/src/csharp/OrchardCore/DinoIpsum.Services/DinoIpsum.Services.csproj
+++ b/src/csharp/OrchardCore/DinoIpsum.Services/DinoIpsum.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Modules.Shared\Services.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
