--- a/src/csharp/OrchardCore/Modules.Shared/Services.Shared.csproj
+++ b/src/csharp/OrchardCore/Modules.Shared/Services.Shared.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Services.Shared</AssemblyName>
+    <RootNamespace>Services.Shared</RootNamespace>
   </PropertyGroup>
 
 </Project>
