DinoIpsum Module added.
From this point forward I just need to tidy code, further share logic and prep for a full blog post.

--- a/src/csharp/OrchardCore/DinoIpsum/DinoIpsum.Module.csproj
+++ b/src/csharp/OrchardCore/DinoIpsum/DinoIpsum.Module.csproj
@@ -11,8 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\" />
-    <Folder Include="wwwroot\" />
+    <ProjectReference Include="..\DinoIpsum.Services\DinoIpsum.Services.csproj" />
   </ItemGroup>
 
 </Project>
