--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/Ipsum.Generator.Web.csproj
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/Ipsum.Generator.Web.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DinoIpsum\DinoIpsum.Module.csproj" />
     <ProjectReference Include="..\HipsterIpsum.Module\HipsterIpsum.Module.csproj" />
     <ProjectReference Include="..\JeffSum.Module\JeffSum.Module.csproj" />
   </ItemGroup>
