Centralise and use some configuration.
For URLs, just to prevent hardcoded URLs. Also, I can parameterise the paragraph count this way also.

--- a/src/csharp/OrchardCore/Jeff.Services/JeffSum.Services.csproj
+++ b/src/csharp/OrchardCore/Jeff.Services/JeffSum.Services.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Modules.Shared\Services.Shared.csproj" />
+    <ProjectReference Include="..\Services.Shared\Services.Shared.csproj" />
   </ItemGroup>
 
 </Project>
