--- a/src/csharp/OrchardCore/DinoIpsum.Services/DinoIpsum.Services.csproj
+++ b/src/csharp/OrchardCore/DinoIpsum.Services/DinoIpsum.Services.csproj
@@ -5,11 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Modules.Shared\Services.Shared.csproj" />
+    <ProjectReference Include="..\Modules.Shared\Modules.Shared.csproj" />
+    <ProjectReference Include="..\Services.Shared\Services.Shared.csproj" />
   </ItemGroup>
 
 </Project>
