--- a/src/csharp/OrchardCore/HipsterIpsum.Module/HipsterIpsum.Module.csproj
+++ b/src/csharp/OrchardCore/HipsterIpsum.Module/HipsterIpsum.Module.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="OrchardCore.Module.Targets" Version="1.0.0-rc1-10004" />
   </ItemGroup>
