--- a/src/csharp/OrchardCore/Ipsum.Generator.Web/appsettings.json
+++ b/src/csharp/OrchardCore/Ipsum.Generator.Web/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiConfiguration": {
+    "DinoIpsumApiUrl": "http://dinoipsum.herokuapp.com/api/?format=json&paragraphs={0}&words=30",
+    "HipsterIpsumApiUrl": "https://hipsum.co/api/?type=hipster-centric&paras={0}&start-with-lorem=1"
+  }
 }
