--- a/src/csharp/OrchardCore/Services.Shared/Services.Shared.csproj
+++ b/src/csharp/OrchardCore/Services.Shared/Services.Shared.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>Services.Shared</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
